--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* bootstrap.conf (bootstrap_epilogue): Define.
+
+2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* TODO: New contents.
 
 2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>
